--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,10 +5,15 @@ permalink: /talks/
 author_profile: true
 ---
 
+# Invited Talk
+- Predicting the future onset of Alzheimer’s disease using neuroimaging and genomics through stratified multi-modal feature ensemble and deep survival analysis.  Invite Health Informatics Seminar Series at Duke University, February 2022.
+- Developing a retinal imaging tool to diagnose Alzheimer’s.  Invited speaker at The ASRP Exchange Program, Alzheimer’s Society Research Program, Canada, July 2021.
+- Quantitative analysis of Alzheimer’s disease classification and longitudinal prediction.  Invited Seminar at Shenzhen University School of Biomedical Engineering Health Science Center in Guangdong, China, June 2019.
+- Mouse brain morphometry: image processing and analysis of preclinical MRI. Invited Seminar at University of Cardiff in Welsh, UK, August 2015.
+
+
 {% if site.talkmap_link == true %}
-
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
 {% endif %}
 
 {% for post in site.talks reversed %}
