--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,17 @@ author_profile: true
 
 {% include base_path %}
 
+Simon Fraser University, School of Engineering Science
+Co-Instructor, ENSC 813/413, Deep Learning Systems in Engineering (9 hours)	
+2012-present
+
+University College London, Medical and Biomedical Imaging
+Co-Instructor, MSc. Advanced Biomedical Imaging (6 hours)
+2016
+
+
+
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
